--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Test of pull request</title>
         <link type="text/css" rel="stylesheet" href="styles.css">
     </head>
     <body>
